# presentations

./: .env.example  .gitignore  README.md  pyproject.toml
.github/: copilot-instructions.md
adaptive-to-generative-ui/: index.html
deckgen/: __init__.py  cli.py  composer.py  providers.py  renderer.py  researcher.py
from-adaptive-to-generative-ui/: index.html
generative-ui-manifesto/: index.html
generative-ui-vs-adaptive-ui/: index.html
presentations/: progressive-disclosure-in-chat-uis.html  the-blank-canvas-paradox.html
references/: generative_ui_manifesto.md
templates/: deck_base.html
the-blank-canvas-paradox/: index.html
