[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "conversational-ui-patterns"
version = "0.1.0"
description = "Conversational UI patterns documentation and presentation generator"
requires-python = ">=3.10"
dependencies = []

[project.optional-dependencies]
openai = ["openai>=1.0"]
anthropic = ["anthropic>=0.40"]
all = ["openai>=1.0", "anthropic>=0.40"]

[project.scripts]
generate-deck = "deckgen.cli:main"

[tool.setuptools.packages.find]
include = ["deckgen*"]
